Nav  bar css completed

--- a/index.html
+++ b/index.html
@@ -38,6 +38,26 @@
           alt="search_icon"
         />
       </div>
+      <div class="nav-language">
+        <img src="./assets/us_flag.png" alt="us_flag" width="25px" />
+        <p>EN</p>
+        <img src="./assets/dropdown_icon.png" width="8px" alt="dropdown_icon" />
+      </div>
+      <div class="nav-text">
+        <p>Hello , Sign in</p>
+        <h1>
+          Account & Lists
+          <img src="./assets/dropdown_icon.png" width="8px alt=" />
+        </h1>
+      </div>
+      <div class="nav-text">
+        <p>Return</p>
+        <h1>& Orders</h1>
+      </div>
+      <a href="" class="nav-cart">
+        <img src="./assets/cart_icon.png" width="35px" alt="cart_icon" />
+        <h4>Cart</h4>
+      </a>
     </nav>
   </body>
 </html>
