--- a/index.html
+++ b/index.html
@@ -70,5 +70,17 @@
       <p>Gift Cards</p>
       <p>Sell</p>
     </div>
+    <div class="header-slider">
+      <a href="#" class="control_prev ">&#129144</a>
+      <a href="#" class="control_next">&#129146</a>
+      <ul>
+        <img src="./assets/header1.jpg" alt="" />
+        <img src="./assets/header2.jpg" alt="" />
+        <img src="./assets/header3.jpg" alt="" />
+        <img src="./assets/header4.jpg" alt="" />
+        <img src="./assets/header5.jpg" alt="" />
+        <img src="./assets/header6.jpg" alt="" />
+      </ul>
+    </div>
   </body>
 </html>
