--- a/index.html
+++ b/index.html
@@ -140,6 +140,44 @@
         
       </div>
     </div>
+    <div class="box-row">
+      <div class="box-col">
+        <h3>Stationery</h3>
+        <img src="./assets/box3-1.jpg" alt="">
+        <a href ="/">Shop More</a>
+      </div>
+      <div class="box-col">
+        <h3>Laptops for study</h3>
+        <img src="./assets/box3-2.jpg" alt="">
+        <a href ="/">Shop More</a>
+      </div>
+      <div class="box-col">
+        <h3>Office chairs</h3>
+        <img src="./assets/box3-3.jpg" alt="">
+        <a href ="/">Shop More</a>
+      </div> <div class="box-col">
+        <h3>aming Monitor</h3>
+        <img src="./assets/box3-4.jpg" alt="">
+        <a href ="/">Shop More</a>
+      </div>
+    </div>
+    <div class="products-slider-with-price">
+      <h2>Deals Under $25</h2>
+      <div class="products">
+        <div class="product-card">
+          <div class="product-img-container">
+              <img src="./assets/product2-1.jpg" alt="">
+          </div>
+          <div class="product-offer">
+            <p>27% off</p> <span>Deal</span>
+        </div>
+        <p class="product-price">$<span>14.49</span>List Price: $19.95</p>
+        <h4>This product is the best for you</h4>
+        </div>
+
+      </div>
+
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
