completed Amazon clone

--- a/index.html
+++ b/index.html
@@ -175,9 +175,57 @@
         <h4>This product is the best for you</h4>
         </div>
 
+        <div class="product-card">
+          <div class="product-img-container">
+              <img src="./assets/product2-2.jpg" alt="">
+          </div>
+          <div class="product-offer">
+            <p>27% off</p> <span>Deal</span>
+        </div>
+        <p class="product-price">$<span>14.49</span>List Price: $19.95</p>
+        <h4>This product is the best for you</h4>
+        </div>
+
+        <div class="product-card">
+          <div class="product-img-container">
+              <img src="./assets/product2-3.jpg" alt="">
+          </div>
+          <div class="product-offer">
+            <p>27% off</p> <span>Deal</span>
+        </div>
+        <p class="product-price">$<span>14.49</span>List Price: $19.95</p>
+        <h4>This product is the best for you</h4>
+        </div>
+
+        <div class="product-card">
+          <div class="product-img-container">
+              <img src="./assets/product2-4.jpg" alt="">
+          </div>
+          <div class="product-offer">
+            <p>27% off</p> <span>Deal</span>
+        </div>
+        <p class="product-price">$<span>14.49</span>List Price: $19.95</p>
+        <h4>This product is the best for you</h4>
+        </div>
+
+        <div class="product-card">
+          <div class="product-img-container">
+              <img src="./assets/product2-5.jpg" alt="">
+          </div>
+          <div class="product-offer">
+            <p>27% off</p> <span>Deal</span>
+        </div>
+        <p class="product-price">$<span>14.49</span>List Price: $19.95</p>
+        <h4>This product is the best for you</h4>
+        </div>
+
       </div>
 
     </div>
+    <footer>
+      <img src="./assets/amazon_logo.png" width="100" alt="Amazon Logo" >
+      <p> © 1996-2024 , Amazon.com, Inc. or its affiliates</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
